--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index --ignore guitars.json"
+    "dev": "nodemon index --ignore guitars.json",
+    "doc": "jsdoc mwFileUpload.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.2",
     "nodemon": "^3.0.2"
   },
   "dependencies": {
@@ -18,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
     "pug": "^3.0.2",
